Fixed: horizontal scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,6 @@
 	box-sizing: border-box;
 }
 
-#horizontal-scroll::-webkit-scrollbar {
+.horizontal-scroll::-webkit-scrollbar {
 	display: none;
 }
